<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_frame"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
    </FrameLayout>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/logo"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
            />
            <TextView
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/apptitle" app:layout_constraintStart_toEndOf="@+id/logo"
                    android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/version" app:layout_constraintStart_toEndOf="@+id/apptitle"
                    app:layout_constraintTop_toTopOf="@+id/apptitle" tools:text="1.2"/>
            <TextView
                    android:text="@string/info_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/copyright"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/apptitle"
                    app:layout_constraintStart_toStartOf="@+id/apptitle"
                    android:clickable="true"
                    android:autoLink="web|email"
                    android:textColorLink="@color/primary"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/divider" app:layout_constraintTop_toBottomOf="@+id/lastmodified"
                    android:layout_marginTop="16dp"/>
            <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp" app:srcCompat="@drawable/ic_info"
                    android:tint="@color/primaryDark"
                    android:id="@+id/about_logo" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/info_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_title" app:layout_constraintStart_toEndOf="@+id/about_logo"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/divider"
                    android:layout_marginTop="16dp" android:textSize="16sp" android:textStyle="bold"/>
            <TextView
                    android:text="@string/info_about_text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_text_1"
                    android:clickable="true"
                    android:autoLink="web|email"
                    android:textColorLink="@color/primary"
                    app:layout_constraintTop_toBottomOf="@+id/about_title"
                    app:layout_constraintStart_toStartOf="@+id/about_title"
                    android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    android:id="@+id/divider2" app:layout_constraintTop_toBottomOf="@+id/about_text_2"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/info_about_text2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_text_2"
                    android:textColorLink="@color/primary"
                    app:layout_constraintTop_toBottomOf="@+id/about_text_1"
                    app:layout_constraintStart_toStartOf="@+id/about_text_1"
                    android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp" app:srcCompat="@drawable/ic_copyright"
                    android:tint="@color/primaryDark"
                    android:id="@+id/credits_logo" app:layout_constraintTop_toBottomOf="@+id/divider2"
                    android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/info_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/credits_title" android:textSize="16sp"
                    android:textStyle="bold" app:layout_constraintStart_toEndOf="@+id/credits_logo"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/divider2"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/info_credits_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:autoLink="web|email"
                    android:textColorLink="@color/primary"
                    android:id="@+id/credits_text" app:layout_constraintStart_toStartOf="@+id/credits_title"
                    app:layout_constraintTop_toBottomOf="@+id/credits_title"
                    android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    android:id="@+id/divider3" app:layout_constraintTop_toBottomOf="@+id/credits_text"
                    android:layout_marginTop="16dp"/>
            <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:tint="@color/primaryDark"
                    app:srcCompat="@drawable/ic_legal" android:id="@+id/legal_logo"
                    app:layout_constraintTop_toBottomOf="@+id/divider3" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/info_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/legal_title"
                    app:layout_constraintTop_toBottomOf="@+id/divider3" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/legal_logo" android:layout_marginStart="16dp"
                    android:textStyle="bold" android:textSize="16sp"/>
            <TextView
                    android:text="@string/info_privacy_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/legal_text" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/legal_title"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="@+id/legal_title"
            />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"
                    android:id="@+id/divider4" app:layout_constraintTop_toBottomOf="@+id/legal_text"
                    android:layout_marginTop="16dp"/>
            <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp" app:srcCompat="@drawable/ic_impress"
                    android:id="@+id/impress_logo"
                    android:tint="@color/primaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/divider4" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/info_impress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/impress_title" app:layout_constraintStart_toEndOf="@+id/impress_logo"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/divider4"
                    android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="16sp"/>
            <TextView
                    android:text="@string/info_impress_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/impress_text"
                    android:clickable="true"
                    android:autoLink="web|email"
                    android:textColorLink="@color/primary"
                    android:paddingBottom="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/impress_title"
                    app:layout_constraintStart_toStartOf="@+id/impress_title"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastmodified" android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/copyright"
                    app:layout_constraintTop_toBottomOf="@+id/copyright"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>